--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": ".eslintrc.js",
   "devDependencies": {
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "css-loader": "^3.4.2",
+    "file-loader": "^5.0.2",
+    "style-loader": "^1.1.3"
   },
   "scripts": {
     "build": "webpack --progress"
