--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "style-loader": "^1.1.2",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "clean-webpack-plugin": "^4.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0"
   },
   "scripts": {
     "build": "webpack --progress"
